spacing fixes

--- a/src/gameComponents/game.css
+++ b/src/gameComponents/game.css
@@ -50,6 +50,9 @@ ol{
     flex-direction: column;
     align-items: center;
 }
+li{
+    margin-bottom: 7px;
+}
 .buttons{
     display: flex;
     width: 400px;
